Fixed volume color and overflow bug

--- a/assets/styles/choose-your-fortune.css
+++ b/assets/styles/choose-your-fortune.css
@@ -17,6 +17,7 @@ body {
   text-align: center;
   font-family: "Anek Devanagari", sans-serif;
   font-weight: 700;
+  overflow: hidden;
 }
 
 @keyframes fade-in {
@@ -45,6 +46,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  margin: 0;
 }
 
 .layer1 {
